Thu Oct 23 09:14:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/DevGuideExamples/EventServices/RTEC_MCast_Federated/EchoEventSupplierMain.cpp:
          Fixed compile error

Thu Oct 23 07:54:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DevGuideExamples/EventServices
        * DevGuideExamples/ImplRepo
        * DevGuideExamples/InterfaceRepo
        * DevGuideExamples/NamingService
        * DevGuideExamples/NotifyService
        * DevGuideExamples/Security
          Moved these directories to orbsvcs/DevGuideExamples, that makes
          it much easier to just build the core examples

Thu Oct 23 06:43:14 UTC 2008  Vladimir Zykov  <vzykov@prismtech.com>

        * utils/nslist/nsdel.cpp:
        * utils/nslist/nsadd.cpp:
        * utils/nslist/nslist.cpp:

          Fixed compile errors on wchar builds. I wonder how wchar build
          on windows accepted my changes before.

Wed Oct 22 17:37:26 UTC 2008  Simon McQueen  <sm@prismtech.com>

        * tao/Bounded_Sequence_CDR_T.h:
        * tao/Unbounded_Sequence_CDR_T.h:

          Remove some sort of template var thing that is killing performance.
          This fixes bug #3472.

Wed Oct 22 12:49:03 UTC 2008  Vladimir Zykov  <vzykov@prismtech.com>

        * orbsvcs/tests/EC_Multiple/EC_Multiple.cpp:

          %C can only be used in ACE_ERROR/ACE_DEBUG, not sprintf.
          I fixed that.

Wed Oct 22 12:01:09 UTC 2008  Vladimir Zykov  <vzykov@prismtech.com>

        * utils/nslist/nsdel.cpp:
        * utils/nslist/nsadd.cpp:
        * utils/nslist/nslist.cpp:

          My fix for incorrect usage of ACE_TEXT_ALWAYS_CHAR had some
          flaws in nslist. Now I fixed it.

Wed Oct 22 11:18:32 UTC 2008  Simon McQueen  <sm@prismtech.com>

        * tests/Bug_3471_Regression/Bug_3471_Regression.mpc:

          Rename mpc file.

        * tests/Bug_3471_Regression/Hello.mpc:

          Removed this file.

Wed Oct 22 10:54:58 UTC 2008  Simon McQueen  <sm@prismtech.com>
